src/snapshots/wlang_ll__parser__tests__workout_long_duration-2.snap
---
source: src/parser.rs
description: "#Planks\nbw 1:30:25"
---
Workout
  SetGroup
    '#'
    'Planks'
    Nl(1)
    Set
      Weight
        'bw'
      Space(1)
      LongDuration
        '1'
        ':'
        '30'
        ':'
        '25'

