src/snapshots/wlang_ll__parser__tests__workout_multiple_groups.snap
---
source: src/parser.rs
description: "\n# Bench Press\n225 x5\n245.5 x8\n\n# Pull-ups\nbw x5\nBW x10"
---
Workout
  Nl(1)
  SetGroup
    '#'
    Space(1)
    'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
      Space(1)
      Quantity
        'x'
        '5'
    Nl(1)
    Set
      Weight
        '245.5'
      Space(1)
      Quantity
        'x'
        '8'
    Nl(2)
  SetGroup
    '#'
    Space(1)
    'Pull-ups'
    Nl(1)
    Set
      Weight
        'bw'
      Space(1)
      Quantity
        'x'
        '5'
    Nl(1)
    Set
      Weight
        'BW'
      Space(1)
      Quantity
        'x'
        '10'

