src/snapshots/wlang_ll__parser__tests__workout_reps_x_suffix_and_prefix-2.snap
---
source: src/parser.rs
description: "#Bench Press\n225 5x"
---
Workout
  SetGroup
    '#'
    'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
      Space(1)
      Quantity
        '5'
        'x'

