src/snapshots/wlang_ll__parser__tests__workout_set_weight_and_quantity_any_order-2.snap
---
source: src/parser.rs
description: "#Bench Press\nx5 225"
---
Workout
  SetGroup
    '#'
    'Bench Press'
    Nl(1)
    Set
      Quantity
        'x'
        '5'
      Space(1)
      Weight
        '225'

