src/snapshots/wlang_ll__parser__tests__workout_set_weight_and_quantity_any_order.snap
---
source: src/parser.rs
description: "#Bench Press\n225 x5"
---
Workout
  SetGroup
    '#'
    'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
      Space(1)
      Quantity
        'x'
        '5'

