src/snapshots/wlang_ll__parser__tests__workout_simple_duration-2.snap
---
source: src/parser.rs
description: "#Planks\nbw 30m"
---
Workout
  SetGroup
    '#'
    'Planks'
    Nl(1)
    Set
      Weight
        'bw'
      Space(1)
      SimpleDuration
        '30'
        'm'

