src/snapshots/wlang_ll__parser__tests__workout_simple_duration-3.snap
---
source: src/parser.rs
description: "#Planks\nbw 30h"
---
Workout
  SetGroup
    '#'
    'Planks'
    Nl(1)
    Set
      Weight
        'bw'
      Space(1)
      SimpleDuration
        '30'
        'h'

