src/snapshots/wlang_ll__parser__tests__workout_simple_duration.snap
---
source: src/parser.rs
description: "#Planks\nbw 30s"
---
Workout
  SetGroup
    '#'
    'Planks'
    Nl(1)
    Set
      Weight
        'bw'
      Space(1)
      SimpleDuration
        '30'
        's'

