src/snapshots/wlang_ll__parser__tests__workout_simplest.snap
---
source: src/parser.rs
description: "\n# Bench Press\n225 x5"
---
Workout
  Nl(1)
  SetGroup
    '#'
    Space(1)
    'Bench Press'
    Nl(1)
    Set
      Weight
        '225'
      Space(1)
      Quantity
        'x'
        '5'

